<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Main Bottom Navigation Destinations -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ethio.shop.ui.fragments.ProductListFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.ethio.shop.ui.fragments.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.ethio.shop.ui.fragments.CartFragment"
        android:label="@string/nav_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.ethio.shop.ui.fragments.OrdersFragment"
        android:label="@string/nav_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ethio.shop.ui.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Product Detail -->
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.ethio.shop.ui.fragments.ProductDetailFragment"
        android:label="Product Detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="string" />
    </fragment>

    <!-- Auth Fragments -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.ethio.shop.ui.fragments.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.ethio.shop.ui.fragments.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up" />

    <!-- Checkout -->
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.ethio.shop.ui.fragments.CheckoutFragment"
        android:label="Checkout"
        tools:layout="@layout/fragment_checkout" />

    <!-- Order Tracking -->
    <fragment
        android:id="@+id/orderTrackingFragment"
        android:name="com.ethio.shop.ui.fragments.OrderTrackingFragment"
        android:label="Order Tracking"
        tools:layout="@layout/fragment_order_tracking">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>

    <!-- Chat -->
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.ethio.shop.ui.fragments.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="productId"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="orderId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!-- Add Product (Seller) -->
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.ethio.shop.ui.fragments.AddProductFragment"
        android:label="Add Product"
        tools:layout="@layout/fragment_add_product" />

    <!-- Seller Dashboard -->
    <fragment
        android:id="@+id/sellerDashboardFragment"
        android:name="com.ethio.shop.ui.fragments.SellerDashboardFragment"
        android:label="Seller Dashboard"
        tools:layout="@layout/fragment_seller_dashboard" />

</navigation>