<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space4">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Stats Grid -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTotalUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space4"
            android:layout_marginEnd="@dimen/space2"
            app:cardBackgroundColor="@color/accent_primary"
            app:cardCornerRadius="@dimen/space2"
            app:cardElevation="@dimen/elevation_low"
            app:layout_constraintEnd_toStartOf="@id/cardTotalProducts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space3">

                <TextView
                    android:id="@+id/tvTotalUsersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_users"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space1"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalUsersLabel"
                    tools:text="150" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTotalProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space4"
            app:cardBackgroundColor="@color/accent_success"
            app:cardCornerRadius="@dimen/space2"
            app:cardElevation="@dimen/elevation_low"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardTotalUsers"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space3">

                <TextView
                    android:id="@+id/tvTotalProductsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_products"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space1"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalProductsLabel"
                    tools:text="500" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTotalOrders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2"
            android:layout_marginEnd="@dimen/space2"
            app:cardBackgroundColor="@color/accent_info"
            app:cardCornerRadius="@dimen/space2"
            app:cardElevation="@dimen/elevation_low"
            app:layout_constraintEnd_toStartOf="@id/cardTotalRevenue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTotalUsers">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space3">

                <TextView
                    android:id="@+id/tvTotalOrdersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_orders"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalOrders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space1"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalOrdersLabel"
                    tools:text="75" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTotalRevenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2"
            app:cardBackgroundColor="@color/accent_warning"
            app:cardCornerRadius="@dimen/space2"
            app:cardElevation="@dimen/elevation_low"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardTotalOrders"
            app:layout_constraintTop_toBottomOf="@id/cardTotalProducts">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space3">

                <TextView
                    android:id="@+id/tvTotalRevenueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_revenue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space1"
                    android:text="ETB 0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h3"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalRevenueLabel"
                    tools:text="ETB 1,500,000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Admin Actions -->
        <TextView
            android:id="@+id/tvActionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space5"
            android:text="@string/admin_actions"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_h3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTotalOrders" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManageUsers"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2"
            android:text="@string/manage_users"
            app:icon="@android:drawable/ic_menu_myplaces"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvActionsLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManageProducts"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2"
            android:text="@string/manage_products"
            app:icon="@android:drawable/ic_menu_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnManageUsers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnViewReports"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2"
            android:text="@string/view_reports"
            app:icon="@android:drawable/ic_menu_info_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnManageProducts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSystemSettings"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2"
            android:text="@string/system_settings"
            app:icon="@android:drawable/ic_menu_preferences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnViewReports" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>